--- a/Aula0202/css/style.css
+++ b/Aula0202/css/style.css
@@ -1,9 +1,13 @@
-.nav-link.nav-item
-{
+.nav-link.nav-item{
     color: #fff;
 }
-.tabelaDisco
-{
+
+.bg-dark.navbar-dark.navbar{
+    position: fixed;
+    width: 100%;
+} 
+
+.tabelaDisco{
     align-items: center;
     align-self: center;
     align-content: center;
@@ -12,15 +16,14 @@
     flex-direction: row;
     
 }
-.content
-{
+
+.content{
     padding-top: 3%;
     padding-left: 10%;
     padding-right: 10%;
 }
 
-.images
-{
+.images{
     padding-top: 3%;
     align-items: center;
     align-self: center;
@@ -29,8 +32,8 @@
     display: flex; 
     flex-direction: row;
 }
-h2
-{
+
+h2{
     padding-top: 3%;
     align-items: center;
     align-self: center;
@@ -38,4 +41,12 @@ h2
     justify-content: center;
     display: flex; 
     flex-direction: row;  
+}
+
+main{
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    margin: 0;
+    min-height: 100vh;
 }
