--- a/Aula0202/css/style.css
+++ b/Aula0202/css/style.css
@@ -3,7 +3,6 @@
 }
 
 .bg-dark.navbar-dark.navbar{
-    position: fixed;
     width: 100%;
 } 
 
@@ -18,7 +17,7 @@
 }
 
 .content{
-    padding-top: 3%;
+
     padding-left: 10%;
     padding-right: 10%;
 }
@@ -35,6 +34,7 @@
 
 h2{
     padding-top: 3%;
+    padding-bottom: 3%;
     align-items: center;
     align-self: center;
     align-content: center;
@@ -49,4 +49,28 @@ main{
     justify-items: center;
     margin: 0;
     min-height: 100vh;
+}
+
+#imgindex:hover{
+-moz-transform: scale(1.2);
+-webkit-transform: scale(1.2);
+transform: scale(1.2);
+}
+
+.pcomfoto{
+    justify-items: center;
+    display: flex;
+    float: left;
+
+    padding-left: 10%;
+    padding-right: 1%;
+}
+
+.pcomfoto1{
+    justify-items: center;
+    display: flex;
+    float: left;
+
+    padding-left: 10%;
+    padding-right: 1%;
 }
