--- a/Aula0202/css/style.css
+++ b/Aula0202/css/style.css
@@ -74,3 +74,28 @@ transform: scale(1.2);
     padding-left: 10%;
     padding-right: 1%;
 }
+
+.pcomfoto2{
+    justify-items: center;
+    display: flex;
+    float: right;
+
+    padding-left: 1%;
+    padding-right: 10%;
+}
+
+.videosyt{
+    align-items: center; 
+    justify-content: center; 
+    display: flex; 
+    flex-direction: row;
+}
+
+.videosyt1{
+    justify-items: center;
+    display: flex;
+    float: left;
+
+    padding-left: 10%;
+    padding-right: 1%;
+}
