--- a/Aula0202/css/style.css
+++ b/Aula0202/css/style.css
@@ -1,11 +1,34 @@
-.nav-link.nav-item{
-    color: #c5c6d0;
+.navbar{
+    width: 100%;
+    background-color: #282828;
+} 
+.nav-item{
+    color: #f0e68c;
+    font-size: large;
+    border: 1px #282828 solid;
+    border-radius: 3px;
+}
+.nav-item:hover{
+    border: 1px #f0e68c solid;
+    color: #f0e68c;
+    background-color: #3f3f3f;
+    text-decoration: none;
+    -moz-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
 }
 
-.bg-dark.navbar-dark.navbar{
-    width: 100%;
+.direitos{
+    align-self: center;
+    align-content: center;
+    justify-content: center;
+    display: flex; 
+    flex-direction: row;
+    padding-bottom: 1%;
+    padding-top: 1%;
+    background-color: #e7eaea;
+}
 
-} 
 
 .tabelaDisco{
     align-items: center;
@@ -57,13 +80,6 @@ main{
 transform: scale(1.2);
 }
 
-.nav-link.nav-item:hover{
-    -moz-transform: scale(1.2);
-    -webkit-transform: scale(1.2);
-    transform: scale(1.2);
-    color: #fff;
-}
-
 .pcomfoto{
     justify-items: center;
     display: flex;
@@ -96,13 +112,4 @@ transform: scale(1.2);
     justify-content: center; 
     display: flex; 
     flex-direction: row;
-}
-
-.videosyt1{
-    justify-items: center;
-    display: flex;
-    float: left;
-
-    padding-left: 10%;
-    padding-right: 1%;
 }
