Imagens com tamanho padrão no carrossel

--- a/Aula0202/css/style.css
+++ b/Aula0202/css/style.css
@@ -1,7 +1,13 @@
 .navbar{
     width: 100%;
     background-color: #282828;
-} 
+}
+
+#active{
+    border: 1px #f0e68c solid;
+    font-size: larger;
+}
+
 .nav-item{
     color: #f0e68c;
     font-size: large;
@@ -20,7 +26,6 @@
 
 .crsImg{
     text-align: center;
-
 }
 
 .setaesquerda{
