--- a/Aula0202/css/style.css
+++ b/Aula0202/css/style.css
@@ -13,7 +13,9 @@
     font-size: large;
     border: 1px #282828 solid;
     border-radius: 3px;
+    font-weight: 600;
 }
+
 .nav-item:hover{
     border: 1px #f0e68c solid;
     color: #f0e68c;
@@ -28,16 +30,16 @@
     text-align: center;
 }
 
-.setaesquerda{
+#setaesquerda{
     float: left;
-    padding-left: 40%;
+    padding-left: 47%;
+    visibility: hidden;
 }
 
 .setadireita{
     float: right;
-    padding-right: 40%;
+    padding-right: 47%;
 }
-
 
 .direitos{
     align-self: center;
@@ -49,7 +51,6 @@
     padding-top: 1%;
     background-color: #e7eaea;
 }
-
 
 .tabelaDisco{
     align-items: center;
@@ -76,6 +77,12 @@
     flex-direction: row;
 }
 
+#imgindex:hover{
+    -moz-transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+    }
+
 h2{
     padding-top: 3%;
     padding-bottom: 3%;
@@ -93,12 +100,6 @@ main{
     justify-items: center;
     margin: 0;
     min-height: 100vh;
-}
-
-#imgindex:hover{
--moz-transform: scale(1.2);
--webkit-transform: scale(1.2);
-transform: scale(1.2);
 }
 
 .pcomfoto{
