--- a/Aula0202/css/style.css
+++ b/Aula0202/css/style.css
@@ -55,7 +55,7 @@
     flex-direction: row;
     padding-bottom: 1.3%;
     padding-top: 1%;
-    background-color: #e7eaea;
+    background-color: #dcdcdc;
 }
 
 .tabelaDisco{
@@ -107,6 +107,31 @@ main{
     justify-items: center;
     margin: 0;
     min-height: 100vh;
+}
+
+.videos{
+    align-items: center;
+    align-self: center;
+    align-content: center;
+    justify-content: center;
+    display: flex; 
+    flex-direction: row;
+    padding-bottom: 3%;
+}
+
+.titulosVids{
+    text-align: center;
+    font-size: larger;
+    padding-top: 5%;
+    padding-bottom: 1%;
+}
+
+.tituloImg{
+    text-align: center;
+    font-size: larger;
+    font-style: oblique;
+    padding-top: 2%;
+    padding-bottom: 1%;
 }
 
 .pcomfoto{
